# openmls_dart

./: .copier-answers.yml  .fvmrc  .gitignore  .pubignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.cargo/: audit.toml
.claude/audits/: api-coverage-audit.md  security-audit.md
.githooks/: pre-commit
.github/workflows/: build-openmls.yml  check-openmls-updates.yml  check-template-updates.yml  publish.yml  test-reusable.yml  test.yml
android/: build.gradle  local.properties
example/: .gitignore  pubspec.yaml
example/android/: gradle.properties
example/lib/: main.dart  utils.dart
example/linux/: CMakeLists.txt
example_cli/: .gitignore  analysis_options.yaml  pubspec.yaml
hook/: build.dart
ios/: openmls.podspec
lib/: openmls.dart
linux/: CMakeLists.txt
macos/: openmls.podspec
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: dart_storage.rs  encrypted_db.rs  frb_generated.rs  hybrid_crypto.rs  lib.rs  snapshot_storage.rs  utils.rs
rust/src/api/: config.rs  credential.rs  engine.rs  init.rs  keys.rs  mod.rs  provider.rs  types.rs  wasm_poc.rs
scripts/: check_deployment_targets.dart  check_exists_frb_release.dart  check_new_upstream_version.dart  check_template_updates.dart  get_android_min_sdk.dart  get_flutter_version.dart  get_version.dart  update_changelog.dart
test/: api_types_test.dart  audit_features_test.dart  credentials_test.dart  error_handling_test.dart  group_lifecycle_test.dart  keys_test.dart  messages_test.dart  mutations_test.dart  openmls_test.dart  proposals_test.dart  provider_test.dart  state_queries_test.dart  storage_test.dart  test_helpers.dart
windows/: CMakeLists.txt
(+65 files in other folders)
